--- a/config.json
+++ b/config.json
@@ -1,15 +1,6 @@
 {
-	"client": {
-		"host": "Please enter your server URL",
-		"port": "Please enter your server port",
-		"username": "Please enter the bot's username you want"
-	},
-	
-	"! DO NOT EDIT BELOW !": "ONLY IF YOU KNOW WHAT YOU ARE DOING",
-	"logLevel": ["error", "log", "debug"],
-	"action": {
-		"commands": ["forward", "back", "left", "right", "jump"],
-		"holdDuration": 5000,
-		"retryDelay": 15000
-	}
+  "host": "Efgh.aternos.me:50265",
+  "port": 50265,
+  "username": "AFK_Warrior_Bot",
+  "login": false
 }
